--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script language="javascript" type="text/javascript" src="ship.js"></script>
   <script language="javascript" type="text/javascript" src="aliens.js"></script>
   <script language="javascript" type="text/javascript" src="bullets.js"></script>
+  <script language="javascript" type="text/javascript" src="alienBullets.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
